--- a/index.css
+++ b/index.css
@@ -5,11 +5,28 @@
     height: 600px;
     border: 2px solid black;
     border-radius:5px;
+    overflow-y: scroll;
 }
 
-.task-container{
+.todo-item{
     display:flex;
     justify-content: center;
     margin-top:20px;
-    
+    background-color: bisque;
+    border-radius: 5px;
+    height: 40px;
+    font-size: 20px;
+}
+
+.action-container{
+    display: block;
+    margin:10px auto;
+    width: 500px;
+    padding: auto;
+}
+
+.input{
+    width: 400px;
+    height: 40px;
+    margin-left: 30px;
 }
